# msoffice-docx-rs

./: .gitignore  Cargo.toml  LICENSE
src/: error.rs  lib.rs  package.rs  resolvedstyle.rs
src/wml/: document.rs  drawing.rs  error.rs  footnotes.rs  mod.rs  numbering.rs  settings.rs  simpletypes.rs  styles.rs  table.rs
tests/: integration_test.rs
