[package]
name = "msoffice_docx"
version = "0.1.0"
authors = ["Kalmár Róbert <rfrostkalmar@gmail.com>"]
edition = "2018"
description = "docx file format deserializer"
keywords = ["office", "docx", "doc"]
license = "MIT"
repository = "https://github.com/dam4rus/msoffice-docx-rs.git"
homepage = "https://github.com/dam4rus/msoffice-docx-rs"
readme = "README.md"
exclude = [
    "tests/sample.docx",
]

[dependencies]
strum = "0.15.0"
strum_macros = "0.15.0"
msoffice_shared = "0.1.1"
regex = "1.3.1"

[dev-dependencies]
simple_logger = "1.2.0"
